--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 display.pyc
 __pycache__
+square_data_1481496762 square_data_1481500602 square_data_1481502020 square_data_1481503407 square_data_1481503956
